--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ charset-normalizer==3.4.1
 cloudinary==1.43.0
 dj3-cloudinary-storage==0.0.6
 Django==5.1.7
+django-cloudinary-storage==0.3.0
 django-cors-headers==4.7.0
 django-extensions==3.2.3
 djangorestframework==3.15.2
